--- a/frontmatter/publications.tex
+++ b/frontmatter/publications.tex
@@ -3,6 +3,22 @@
 \markboth{\uppercase{Publications}}{\uppercase{Publications}}
 
 \begin{itemize}
-  \item \textbf{Tong Xiao}, Shuang Li, Bochao Wang, Liang Lin, and Xiaogang Wang, "Joint Detection and Identification Feature Learning for Person Search." In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textbf{CVPR}), 2017.
+  \item Wei Li, Rui Zhao, \textbf{Tong Xiao}, and Xiaogang Wang, "DeepReID: Deep Filter Pairing Neural Network for Person Re-Identification." In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2014.
+
+  \item \textbf{Tong Xiao}, Tian Xia, Yi Yang, Chang Huang, and Xiaogang Wang, "Learning from Massive Noisy Labeled Data for Image Classification." In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2015.
+
+  \item \textbf{Tong Xiao}, Hongsheng Li, Wanli Ouyang, and Xiaogang Wang, "Learning Deep Feature Representations with Domain Guided Dropout for Person Re-identification." In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2016.
+
+  \item Cheng Tai, \textbf{Tong Xiao}, Yi Zhang, Xiaogang Wang, and Weinan E, "Convolutional Neural Networks with Low-rank Regularization." In \textit{Proceedings of the International Conference on Learning Representations} (\textit{\textbf{ICLR}}), 2016.
+
+  \item Kai Kang, Hongsheng Li, Junjie Yan, Xingyu Zeng, Bin Yang, \textbf{Tong Xiao}, Cong Zhang, Zhe Wang, Ruohui Wang, Xiaogang Wang, and Wanli Ouyang, "T-CNN: Tubelets with convolutional neural networks for object detection from videos." \textit{IEEE Transactions on Circuits and System for Video Technology} (\textit{\textbf{TCSVT}}), under review.
+
+  \item Xingyu Zeng, Wanli Ouyang, Junjie Yan, Hongsheng Li, \textbf{Tong Xiao}, Kun Wang, Yu Liu, Yucong Zhou, Bin Yang, Zhe Wang, Hui Zhou, and Xiaogang Wang, "Crafting GBD-Net for Object Detection" (\textit{\textbf{TPAMI}}), under review.
+
+  \item \textbf{Tong Xiao}, Shuang Li, Bochao Wang, Liang Lin, and Xiaogang Wang, "Joint Detection and Identification Feature Learning for Person Search." In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2017.
+
+  \item Shuang Li, \textbf{Tong Xiao}, Hongsheng Li, Bolei Zhou, Dayu Yue, and Xiaogang Wang, "Person Search with Natural Language Description." In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2017.
+
+  \item Kai Kang, Hongsheng Li, \textbf{Tong Xiao}, Wanli Ouyang, Junjie Yan, Xihui Liu, and Xiaogang Wang, "Object Detection in Videos with Tubelet Proposal Networks." In \textit{Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition} (\textit{\textbf{CVPR}}), 2017.
 
 \end{itemize}
