Add noisy labels paper

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -1,18 +1,18 @@
 \usepackage{url}
 \usepackage{graphicx}
 %\usepackage{color}
-\usepackage{amsmath,amssymb,bm}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{amsthm}
 \usepackage{float,multicol}
 %\usepackage{fancyheadings}
 \usepackage{fancyhdr}
 \usepackage{subfigure}
-
 \usepackage{comment}
 \usepackage{CJK}
-
 \usepackage{sectsty}
-
 \usepackage{ifpdf}
+\usepackage{xspace}
 
 \usepackage{preamble/thesis}
 
@@ -109,6 +109,7 @@ citecolor=blue,filecolor=magenta,menucolor=blue,pagecolor=red,urlcolor=blue}
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{remark}[theorem]{Remark}
+\newtheorem{proposition}[theorem]{Proposition}
 
 %The \raggedbottom declaration makes all pages
 %the height of the text on that page. No extra vertical space is added.
