--- a/thesis.tex
+++ b/thesis.tex
@@ -13,6 +13,9 @@
 %%%%% Main Body %%%%%
 % Chapters
 \input{mainmatter/introduction.tex}
+\input{mainmatter/noisy_labels.tex}
+\input{mainmatter/multi_domain.tex}
+\input{mainmatter/person_search.tex}
 \input{mainmatter/conclusion.tex}
 %\clearpage
 \appendix
