--- a/preamble/thesis.sty
+++ b/preamble/thesis.sty
@@ -295,54 +295,67 @@
 %    {\sl  Bibliography} \hfil \rm\thepage}
 %}
 
-% the following defines the \newtheorem command and
-% is copied from /usr/local/tex/lib/inputs/latex.tex
-% modifed by smlau to make the theorem text using normal
-% font rather than italics
-\def\newtheorem#1{\@ifnextchar[{\@othm{#1}}{\@nthm{#1}}}
-
-\def\@nthm#1#2{%
-\@ifnextchar[{\@xnthm{#1}{#2}}{\@ynthm{#1}{#2}}}
-
-\def\@xnthm#1#2[#3]{\expandafter\@ifdefinable\csname #1\endcsname
-{\@definecounter{#1}\@addtoreset{#1}{#3}%
-\expandafter\xdef\csname the#1\endcsname{\expandafter\noexpand
-  \csname the#3\endcsname \@thmcountersep \@thmcounter{#1}}%
-\global\@namedef{#1}{\@thm{#1}{#2}}\global\@namedef{end#1}{\@endtheorem}}}
-
-\def\@ynthm#1#2{\expandafter\@ifdefinable\csname #1\endcsname
-{\@definecounter{#1}%
-\expandafter\xdef\csname the#1\endcsname{\@thmcounter{#1}}%
-\global\@namedef{#1}{\@thm{#1}{#2}}\global\@namedef{end#1}{\@endtheorem}}}
-
-%% RmS 92/01/10: check for existence of theorem environment #2
-\def\@othm#1[#2]#3{%
-  \@ifundefined{c@#2}{\@latexerr{No theorem environment `#2' defined}\@eha}%
-  {\expandafter\@ifdefinable\csname #1\endcsname
-  {\global\@namedef{the#1}{\@nameuse{the#2}}%
-\global\@namedef{#1}{\@thm{#2}{#3}}%
-\global\@namedef{end#1}{\@endtheorem}}}}
-
-\def\@thm#1#2{\refstepcounter
-    {#1}\@ifnextchar[{\@ythm{#1}{#2}}{\@xthm{#1}{#2}}}
-
-\def\@xthm#1#2{\@begintheorem{#2}{\csname the#1\endcsname}\ignorespaces}
-\def\@ythm#1#2[#3]{\@opargbegintheorem{#2}{\csname
-       the#1\endcsname}{#3}\ignorespaces}
-
-%DEFAULT VALUES
-\def\@thmcounter#1{\noexpand\arabic{#1}}
-\def\@thmcountersep{.}
-%deleted September 2, 1986 MDK
-%\def\@makethmnumber#1#2{\bf #1 #2:}
-
-%% RmS 91/08/14 Moved \it after \item to make it work with NFSS
-% smlau - remove the \it command
-%\def\@begintheorem#1#2{\trivlist \item[\hskip \labelsep{\bf #1\ #2}]\it}
-\def\@begintheorem#1#2{\trivlist \item[\hskip \labelsep{\bf #1\ #2}]}
-\def\@opargbegintheorem#1#2#3{\trivlist
-      \item[\hskip \labelsep{\bf #1\ #2\ (#3)}]\it}
-\def\@endtheorem{\endtrivlist}
+%% the following defines the \newtheorem command and
+%% is copied from /usr/local/tex/lib/inputs/latex.tex
+%% modifed by smlau to make the theorem text using normal
+%% font rather than italics
+%\def\newtheorem#1{\@ifnextchar[{\@othm{#1}}{\@nthm{#1}}}
 %
-% end of \newtheorem command
+%\def\@nthm#1#2{%
+%\@ifnextchar[{\@xnthm{#1}{#2}}{\@ynthm{#1}{#2}}}
 %
+%\def\@xnthm#1#2[#3]{\expandafter\@ifdefinable\csname #1\endcsname
+%{\@definecounter{#1}\@addtoreset{#1}{#3}%
+%\expandafter\xdef\csname the#1\endcsname{\expandafter\noexpand
+  %\csname the#3\endcsname \@thmcountersep \@thmcounter{#1}}%
+%\global\@namedef{#1}{\@thm{#1}{#2}}\global\@namedef{end#1}{\@endtheorem}}}
+%
+%\def\@ynthm#1#2{\expandafter\@ifdefinable\csname #1\endcsname
+%{\@definecounter{#1}%
+%\expandafter\xdef\csname the#1\endcsname{\@thmcounter{#1}}%
+%\global\@namedef{#1}{\@thm{#1}{#2}}\global\@namedef{end#1}{\@endtheorem}}}
+%
+%%% RmS 92/01/10: check for existence of theorem environment #2
+%\def\@othm#1[#2]#3{%
+  %\@ifundefined{c@#2}{\@latexerr{No theorem environment `#2' defined}\@eha}%
+  %{\expandafter\@ifdefinable\csname #1\endcsname
+  %{\global\@namedef{the#1}{\@nameuse{the#2}}%
+%\global\@namedef{#1}{\@thm{#2}{#3}}%
+%\global\@namedef{end#1}{\@endtheorem}}}}
+%
+%\def\@thm#1#2{\refstepcounter
+    %{#1}\@ifnextchar[{\@ythm{#1}{#2}}{\@xthm{#1}{#2}}}
+%
+%\def\@xthm#1#2{\@begintheorem{#2}{\csname the#1\endcsname}\ignorespaces}
+%\def\@ythm#1#2[#3]{\@opargbegintheorem{#2}{\csname
+       %the#1\endcsname}{#3}\ignorespaces}
+%
+%%DEFAULT VALUES
+%\def\@thmcounter#1{\noexpand\arabic{#1}}
+%\def\@thmcountersep{.}
+%%deleted September 2, 1986 MDK
+%%\def\@makethmnumber#1#2{\bf #1 #2:}
+%
+%%% RmS 91/08/14 Moved \it after \item to make it work with NFSS
+%% smlau - remove the \it command
+%%\def\@begintheorem#1#2{\trivlist \item[\hskip \labelsep{\bf #1\ #2}]\it}
+%\def\@begintheorem#1#2{\trivlist \item[\hskip \labelsep{\bf #1\ #2}]}
+%\def\@opargbegintheorem#1#2#3{\trivlist
+      %\item[\hskip \labelsep{\bf #1\ #2\ (#3)}]\it}
+%\def\@endtheorem{\endtrivlist}
+%%
+%% end of \newtheorem command
+%%
+
+\makeatletter
+\DeclareRobustCommand\onedot{\futurelet\@let@token\@onedot}
+\def\@onedot{\ifx\@let@token.\else.\null\fi\xspace}
+\def\eg{\emph{e.g}\onedot} \def\Eg{\emph{E.g}\onedot}
+\def\ie{\emph{i.e}\onedot} \def\Ie{\emph{I.e}\onedot}
+\def\cf{\emph{c.f}\onedot} \def\Cf{\emph{C.f}\onedot}
+\def\etc{\emph{etc}\onedot} \def\vs{\emph{vs}\onedot}
+\def\wrt{w.r.t\onedot} \def\dof{d.o.f\onedot}
+\def\etal{\emph{et al}\onedot}
+\def\vec{\mathbf}
+\def\mat{\mathbf}
+\makeatother
