Add person search paper

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -5,9 +5,10 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{float,multicol}
+\usepackage{subcaption}
 %\usepackage{fancyheadings}
 \usepackage{fancyhdr}
-\usepackage{subfigure}
+% \usepackage{subfigure}
 \usepackage{comment}
 \usepackage{CJK}
 \usepackage{sectsty}
