Add two more chapters

--- a/thesis.tex
+++ b/thesis.tex
@@ -13,6 +13,8 @@
 %%%%% Main Body %%%%%
 % Chapters
 \input{mainmatter/introduction.tex}
+\input{mainmatter/deep_learning.tex}
+\input{mainmatter/human_identification.tex}
 \input{mainmatter/noisy_labels.tex}
 \input{mainmatter/multi_domain.tex}
 \input{mainmatter/person_search.tex}
