Finish feedforward subsection

--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1075,6 +1075,13 @@ doi = {10.1007/s11263-015-0816-y}
   year={2014}
 }
 
+@inproceedings{he2016identity,
+  title={Identity mappings in deep residual networks},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={ECCV},
+  year={2016}
+}
+
 @article{he2015spatial,
   title={Spatial pyramid pooling in deep convolutional networks for visual recognition},
   author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
