--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{mathtools}
 \usepackage{float,multicol}
 \usepackage{subcaption}
 \usepackage{fancyhdr}
